2010-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Update mesh skeleton applications.

	* apps/mesh-segm-skel/mesh-complex-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-skel.cc:
	Catch up with the new interface of breadth-first thinning and
	auxiliary routines.

2010-09-09  Roland Levillain  <roland@lrde.epita.fr>

	More generic breadth-first-thinning-based skeleton transformations.

	* mln/topo/is_simple_cell.hh: Make this functor more generic.
	* mln/topo/detach_cell.hh (detach): Turn this function into a
	more generic functor.
	* mln/make/attachment.hh (mln::make::attachment)
	* mln/make/detachment.hh (mln::make::detachment):
	Make these routines more generic.
	* mln/topo/skeleton/breadth_first_thinning.hh
	(mln::topo::skeleton::breadth_first_thinning):
	Adjust.
	* headers.mk: Regen.

2010-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Introduce a helper to build an mln::mutable_extension_ima.

	* mln/core/routine/mutable_extend.hh: New.
	* headers.mk: Regen.

2010-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Introduce an extension-by-mutable-image morpher.

	* mln/core/image/dmorph/mutable_extension_ima.hh: New.
	* headers.mk: Regen.

2010-09-20  Roland Levillain  <roland@lrde.epita.fr>

	Get the `detach' argument of thinning algorithms by reference.

	* mln/topo/skeleton/breadth_first_thinning.hh
	(topo::skeleton::breadth_first_thinning)
	* mln/topo/skeleton/priority_driven_thinning.hh
	(topo::skeleton::priority_driven_thinning):
	Here.

2010-09-19  Roland Levillain  <roland@lrde.epita.fr>

	Get rid of intermediate psites in thinning algorithms.

	* mln/topo/skeleton/breadth_first_thinning.hh,
	* mln/topo/skeleton/priority_driven_thinning.hh:
	Here.

2010-09-19  Roland Levillain  <roland@lrde.epita.fr>

	Have topo::is_n_face take a psite type as class parameter.

	* mln/topo/is_n_face.hh: Here, so that the argument of this
	functor (e.g., an iterator) is always converted to the psite